--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
-<html> 
-<head> 
-<title> 
-login page</title> 
-</head> 
-<body bgcolor="cyan"> <center> 
-<strong><h1> AMAZON </h1></strong></center> <right> 
-<table align="right"> 
-<tr> 
-<td><h4>user name</td> 
-<td><input type="text" ></td> 
-<td></td> 
-</tr> 
-<tr> 
-<td><h4>password</td> 
-<td><input type="password"></td> 
-<td></td> 
-</tr> 
-<tr> 
-<td> 
-<form method="post" action="catalog.html" > 
-<input type="submit" value="submit" > 
-</form> 
-</td> 
-<td> 
-<form method="post" action="userpro.html" > 
-<input type="submit" value="register" > 
-&nbsp;&nbsp; 
-<input type="reset" value="reset"></form></td> </tr> 
-</table> 
-</body> 
+<html>
+    <head>
+        <script language="javascript" type="text/javascript">
+            function showtime()
+            {
+                const d=new date();
+                document.getElementById("p").innerHTML=d.getDate();
+                document.getElementById("q").innerHTML=d.getHours();
+            }
+        </script>
+        <body bgcolor="red" text="yellow">
+            <h1 style="background-color: blue; font-size: 50; color: white;">
+            welcome to javascript demo</h1>
+            <p id="p" style="font-size: 50; color: orange;">
+            <p id="q" style="font-size: 50; color: orange;"></p>
+        </body>
+    </head>
 </html>
